# Transitorios_AIoT-IDF

./: .gitignore  CMakeLists.txt  COMMERCIAL-LICENSE-NOTICE.md  LICENSE  README.md  Transitorios_AIoT-IDF.eez-project  sdkconfig  sdkconfig.defaults
components/Configuracion_AIoT/: CMakeLists.txt
components/Configuracion_AIoT/include/: Configuracion_AIoT.h  System_Defines_AIoT.h  xpt2046_lvgl9.h
components/Configuracion_AIoT/src/: Configuracion_AIoT.c  xpt2046_lvgl9.c
components/EEZ_AIoT/: CMakeLists.txt  README_DEV.txt
components/EEZ_AIoT/src/: actions.cpp  vars.cpp
components/EEZ_AIoT/ui/: .eez-project-build  actions.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_image_aio_t.c  ui_image_aio_t_235x157.c  ui_image_ud_fjd_c.c  ui_image_ud_fjd_c_058x077.c  vars.h
components/IO_AIoT/: CMakeLists.txt  LEEME_IO_AIoT.txt
components/IO_AIoT/include/: IO_AIoT.h
components/IO_AIoT/src/: IO_AIoT.c
components/System_Control_AIoT/: CMakeLists.txt
components/System_Control_AIoT/include/: System_Control_AIoT.h
components/System_Control_AIoT/src/: System_Control_AIoT.c
components/UARTn_AIoT/: CMakeLists.txt
components/UARTn_AIoT/include/: UARTn_AIoT.h
components/UARTn_AIoT/src/: UARTn_AIoT.cpp
components/WiFi_AIoT/: CMakeLists.txt
components/WiFi_AIoT/include/: WiFi_AIoT.h
components/WiFi_AIoT/src/: WiFi_AIoT.c
docs/architecture/: PromptMaestro.docx  SistemaArchivos.txt  SistemaDeArchivos.docx  SistemaDeArchivos.txt  docs.txt
docs/images/: GPIO ESP32-S3-WROOM-1-N4R2.jfif
main/: CMakeLists.txt  idf_component.yml  main_AIoT.c
